examples/test/testpolicy16266.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16266
  namespace: namespace277
spec:
  podSelector:
    matchLabels:
      key30: value7
      key2: value29
      key48: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value11
          key31: value45
          key41: value35
      podSelector:
        matchLabels:
          key49: value47
          key47: value4
